Licenciatura (BSc)/2º Ano/POO/Guião 7/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\Miguel\Desktop\POO\Guião 7
-d
C:\Users\Miguel\Desktop\POO\Guião 7\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\Miguel\Desktop\POO\Guião 7\HoteisInc.java
<---- end of javadoc command ---->
Loading source file C:\Users\Miguel\Desktop\POO\Guião 7\HoteisInc.java...
C:\Users\Miguel\Desktop\POO\Guião 7\HoteisInc.java:128: error: illegal start of type
     * Adicionar a informação de um novo hotel
     ^
C:\Users\Miguel\Desktop\POO\Guião 7\HoteisInc.java:128: error: ';' expected
     * Adicionar a informação de um novo hotel
      ^
C:\Users\Miguel\Desktop\POO\Guião 7\HoteisInc.java:128: error: ';' expected
     * Adicionar a informação de um novo hotel
                             ^
C:\Users\Miguel\Desktop\POO\Guião 7\HoteisInc.java:128: error: ';' expected
     * Adicionar a informação de um novo hotel
                                   ^
C:\Users\Miguel\Desktop\POO\Guião 7\HoteisInc.java:128: error: ';' expected
     * Adicionar a informação de um novo hotel
                                              ^
5 errors
